# School21

./: .gitignore  README.md
CPP1_s21_matrixplus/: .gitignore  CMakeLists.txt
CPP1_s21_matrixplus/src/: CMakeLists.txt  Makefile  TMPCMakeLists.txt  main.cpp  s21_matrix_oop.h
CPP1_s21_matrixplus/src/arithmetic/: merge.cpp  mult.cpp
CPP1_s21_matrixplus/src/comparison/: eq.cpp
CPP1_s21_matrixplus/src/core/: constructor.cpp  destructor.cpp  resize.cpp  size.cpp
CPP1_s21_matrixplus/src/debug/: debug.h  print.cpp
CPP1_s21_matrixplus/src/operators/: operators.cpp
CPP1_s21_matrixplus/src/other/: complements.cpp  crop.cpp  determiant.cpp  inverse.cpp  transpose.cpp
CPP1_s21_matrixplus/src/test/: CMakeLists.txt  calc_matrix.cpp  construct.cpp  det_matrix.cpp  eq_test.cpp  inverse_matrix.cpp  mul_matrix.cpp  mul_num.cpp  other.cpp  sub_matrix.cpp  sum_matrix.cpp  transpose_matrix.cpp
D01_Linux/: README.md
D01_Linux/src/: BiBRa_PEP.md
DO2_LinuxNetwork/src/: desc.md
DO3_LinuxMonitoring_v1.0/src/01/: main.sh
DO3_LinuxMonitoring_v1.0/src/02/: main.sh
DO3_LinuxMonitoring_v1.0/src/03/: color.sh  main.sh
DO3_LinuxMonitoring_v1.0/src/04/: color.sh  main.sh  parse_conf.sh
DO3_LinuxMonitoring_v1.0/src/05/: main.sh
DO5_SimpleDocker/src/: desc.md
DO5_SimpleDocker/src/server/: server.c
DO5_SimpleDocker/src/server4/: Dockerfile
DO5_SimpleDocker/src/server5/: Dockerfile
DO5_SimpleDocker/src/server6/: docker-compose.yml
FRONT_00-0/src/chapter_3/: calculator.js  counter.js  fibonachi.js  paskalsTriangle.js
FRONT_00-0/src/chapter_4/: atm.js  removeReps.js  removeSymbol.js  sudoku.js  wordSearch.js
FRONT_01-0/src/chapter_1/: classes.js  hard_classes.js
FRONT_01-0/src/chapter_2/: fsHard.js  fsSimple.js
FRONT_02-0/src/chapter_1/: index.html
FRONT_04-0/: .gitignore  package-lock.json  package.json  postman.postman_collection
FRONT_04-0/models/: index.js  menuItem.js  order.js  user.js
FRONT_09-0/src/: package-lock.json  package.json
SimpleBashUtils/: CMakeLists.txt  README.md  main.c  makefile  test_cat.py  test_grep.py
SimpleBashUtils/data-samples/: a  b  b.txt  c  grep_file2  grep_file3  grep_file4  k  new  pat  t  text  wierdo
SimpleBashUtils/src/: CMakeLists.txt  Makefile  custom.h  flag.h  main.c  makefile  s21_grep  test_grep.py
SimpleBashUtils/src/cat/: cat.c  cat.h  main.c  s21_cat.c  s21_cat.h  test_cat.py
SimpleBashUtils/src/grep/: find_all_pattern_in_file.c  flags_parser.c  grep.c  grep.h  grep_parser.c  main.c  more_string.c  new_grep.c  privat_grep.h  s21_grep.c  s21_grep.h  test_grep.py
SimpleBashUtils/src/grep/headers/: find_all_pattern_in_file.h  flags_parser.h  grep.h
SimpleBashUtils/src/grep/test/: s21_grep_test.c  s21_grep_test.h  test_base.c  test_c.c  test_combinations.c  test_e.c  test_f.c  test_h.c  test_i.c  test_l.c  test_n.c  test_o.c  test_s.c  test_v.c
SimpleBashUtils/src/linked_list/: linked_list.c  linked_list.h
s21_calc/: .gitignore  CMakeLists.txt  main.py
s21_calc/materials/: 7 principles of structural programming.md
s21_calc/src/: CMakeLists.txt  Makefile  calc.c  features.h  main.c  mainwindow.cpp  mainwindow.h  mainwindow.ui  makefile  qcustomplot.cpp  s21_calc.h  string_to_polish.c
s21_calc/src/backend/: calc.c  calculator.c  calculator.h  features.h  makefile  s21_calc.h  string_to_polish.c  test.c  translator.py  word_to_polish.c
s21_calc/src/backend/structs/ld_stack/core/: add_to_ld_stack.c  core.h  create_ld_stack.c  free_ld_stack.c  pop_ld_stack.c
s21_calc/src/backend/structs/lex_stack/: lex_stack.h
s21_calc/src/backend/structs/lex_stack/core/: add_to_lex_stack.c  core.h  create_lex_stack.c  dump_lex_stack.c  free_lex_stack.c  pop_lex_stack.c  reverse_stack.c
s21_calc/src/backend/structs/lex_stack/debug/: debug.h  print_lex_stack.c
s21_calc/src/backend/structs/lexeme/: lexem.h
s21_calc/src/backend/structs/lexeme/conversion/: conversion.h  string_to_lexeme.c
s21_calc/src/backend/structs/lexeme/core/: core.h  create_lexeme.c  free_lexeme.c  get_type_lexeme_from_string.c
s21_calc/src/backend/structs/operators/: operators.h
s21_calc/src/backend/structs/operators/comparison/: char_is_operator.c  comparison.h  string_is_command.c
s21_calc/src/backend/structs/operators/conversion/: char_to_priority_operator.c  conversion.h  string_to_priority_operator.c
s21_calc/src/backend/structs/operators/core/: core.c  core.h
s21_calc/src/backend/structs/stack/core/: add_to_stack.c  core.h  create_stack.c  free_stack.c
s21_calc/src/backend/tests/: bad_test.c  credit.c  deposit.c  hard.c  main.c  main.h  simple_float.c  simple_functions.c  simple_int.c
s21_calc/src/frontend/: calc.py  mod_calc.py
s21_calc/src/frontend/src_ui/: calc.ui  tmp_calc.ui
s21_calc/src/structs/ld_stack/: ld_stack.h
s21_calc/src/structs/ld_stack/core/: create_ld_stack.c  free_ld_stack.c  pop_ld_stack.c
s21_calc/src/structs/lexeme/conversion/: conversion.h
s21_calc/src/structs/lexeme/core/: core.h  create_lexeme.c  free_lexeme.c  get_type_lexeme_from_string.c
s21_calc/src/structs/operators/: operators.c  operators.h
s21_calc/src/structs/operators/comparison/: string_is_command.c
s21_calc/src/structs/operators/conversion/: char_to_priority_operator.c  conversion.h  string_to_priority_operator.c
s21_calc/src/structs/operators/core/: core.h
s21_calc/src/structs/stack/: constant.h  stack.c  stack.h
s21_calc/src/structs/stack/core/: add_to_stack.c  core.h  create_stack.c  dump_stack.c  pop_stack.c  reverse_stack.c
s21_calc/src/structs/stack/debug/: debug.h  print_stack.c
s21_decimal/: .gitignore  CMakeLists.txt  test.c
s21_decimal/src/: s21_decimal.c  s21_decimal.h
s21_decimal/src/MyLib/: bit.h  style.h
s21_decimal/src/another/: decimal_another.h  s21_floor.c
s21_decimal/src/comparison/: decimal_comparison.h  s21_less.c
s21_decimal/src/core/: decimal_core.h  exponent.c  get_sign.c  sign.c
s21_math/src/: s21_abs.c  s21_acos.c  s21_asin.c  s21_factorial.c  s21_math.h  s21_sqrt.c
s21_matrix/: .gitignore  main.c
s21_matrix/src/: Makefile  s21_matrix.c  s21_matrix.h
(+101 files in other folders)
